--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,30 @@ public
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Distribution / packaging
+.Python
+env/
+build/
+lib/
+
+# dotenv
+.env
+
+# virtualenv
+.venv
+venv/
+
+# mypy
+.mypy_cache/
+
+.DS_Store
+*.sqlite3
+media/
+*.pyc
+*.db
+*.pid
+# django migrations 
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
